--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="middle-container">
         <div class="profile">
-            <img src="images/Profile.png" alt="satyanarayan profile Img">
+            <img src="images/profile.png" alt="satyanarayan profile Img">
             <h2 class="hi">Hi Everybody</h2>
             <p class="introduction">I am a web Developer and Graphics Designer. I love to play Vallybal. I love
                 travelling.</p>
