--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Satyanarayan Dalei</title>
@@ -26,7 +27,7 @@
 
     <div class="middle-container">
         <div class="profile">
-            <img src="images/profile.png" alt="satyanarayan profile Img">
+            <img src="images/profile.png" alt="satyanarayan profile Image">
             <h2 class="hi">Hi Everybody</h2>
             <p class="introduction">I am a web Developer and Graphics Designer. I love to play Vallybal. I love
                 travelling.</p>
