--- a/index.html
+++ b/index.html
@@ -79,12 +79,23 @@
             <a class="btn" href="mailto:satyanarayandalei8@gmail.com">CONTACT ME (Email)</a>
         </div>
     </div>
-
+    
+    <div style="text-align:center;
+                background-color:#f47a7a;
+                margin:50px 0 50px 0;
+                padding:10px;
+                color:white;">
+        <p>
+            NOTICE : <br>
+            The Web development and Graphics Design Services are not currently provided.
+            This website is an Inbuild Practice through Github Repositry.THANK YOU !
+        </p>
+    </div>
     <div class="bottom-container">
         <a class="linked-in" href="https://www.linkedin.com/in/satyanarayan-dalei-baab2819a/">LinkedIn</a>
         <a class="facebook" href="https://www.facebook.com/satyanarayan.dalei.7">Facebook</a>
         <a class="footer-link" href="https://boomboom360.blogspot.com/">Website</a>
-        <p class="copyright">© 2018 Satyanarayan Dalei.</p>
+        <p class="copyright">© 2020 copyright Satyanarayan Dalei.</p>
         <p class="credit">Icon credit : Icons made by
             <a href="https://www.flaticon.com/authors/flat-icons" title="Flat Icons">Flat Icons</a>
             from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
