--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="profile">
             <img src="images/profile.png" alt="satyanarayan profile Image">
             <h2 class="hi">Hi Everybody</h2>
-            <p class="introduction">I am a web Developer and Graphics Designer. I love to play Vallybal. I love
+            <p class="introduction">I am a web Developer and Graphics Designer. I love to play Valleybal. I love
                 travelling.</p>
         </div>
         <hr>
